[gd_scene load_steps=7 format=3 uid="uid://dlr0h68iknrq0"]

[ext_resource type="Texture2D" uid="uid://dodurqyroyjnx" path="res://graphics/enemies/scout.png" id="1_3vaxg"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_po83w"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_3gvgv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3prpp"]
shader = ExtResource("2_3gvgv")
shader_parameter/color = Color(0.835294, 0.921569, 0.980392, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i6es5"]
radius = 45.0444

[sub_resource type="CircleShape2D" id="CircleShape2D_betve"]
radius = 1038.46

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_po83w")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3prpp")
position = Vector2(42, 27)
rotation = 1.5708
texture = ExtResource("1_3vaxg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_i6es5")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_betve")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(118, -27)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(125, 12)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
